# corporate_group_ordering

./: LICENSE  README.md  aFile.db  app.py  database.py  pyproject.toml  replit.nix  requirements.txt  scratch.py
templates/: add_college_order.html  add_menu_item.html  add_order.html  admins_details.html  balance_recharge.html  confirm_email.html  create_order.html  create_restaurant.html  floating_labels.html  footer.html  forgot_password.html  home.html  icon.html  login.html  login_main.html  money_transfer.html  money_transfer_all_users.html  navbar.html  navbar_login.html  order_history.html  order_payment.html  order_sheet.html  registration.html  registration_complete.html  reset_password.html  telegram_notifications.html  transaction_history.html  transfer_wallet.html  update_item_price.html  users_details.html  wallet_transaction_history.html
