[tool.poetry]
name = "repl_nix_corporategroupordering-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
SQLAlchemy = "^2.0.12"
pytz = "^2023.3"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
WTForms = "^3.0.1"
Flask-Bcrypt = "^1.0.1"
Flask-WTF = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
